@@ -1,5 +1,8 @@
 /*
  * $Log: custom_error.c,v $
+ * Revision 1.2  2023-04-25 22:41:34+05:30  Cprogrammer
+ * removed use of static variables as function is noreturn
+ *
  * Revision 1.1  2022-03-08 22:56:41+05:30  Cprogrammer
  * Initial revision
  *
@@ -16,19 +19,15 @@ no_return void
 custom_error(char *program, char *type, char *message, char *extra, char *code)
 {
 	char           *c;
-	static char     flag;
-	static char     errbuf[256];
-	static int      errfd = -1;
-	static struct substdio sserr;
+	char            errbuf[256];
+	int             errfd;
+	struct substdio sserr;
 
-	if (errfd == -1) {
-		if (!(c = env_get("ERROR_FD")))
-			errfd = CUSTOM_ERR_FD;
-		else
-			scan_int(c, &errfd);
-	}
-	if (!flag)
-		substdio_fdbuf(&sserr, write, errfd, errbuf, sizeof(errbuf));
+	if (!(c = env_get("ERROR_FD")))
+		errfd = CUSTOM_ERR_FD;
+	else
+		scan_int(c, &errfd);
+	substdio_fdbuf(&sserr, write, errfd, errbuf, sizeof(errbuf));
 	if (substdio_put(&sserr, type, 1) == -1 ||
 			substdio_puts(&sserr, program) == -1 ||
 			substdio_put(&sserr, ": ", 2) ||
